added styles to digital clock

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title></title>
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="clock.css">
 </head>
 <body>
-  <div>
-    <h1 id="clock"></h1>
+  <div id="content">
+    <h1 id="clock"><span id="diem"></span></h1>
   </div>
   <script src="clock.js"></script>
 </body>
